# calorie-counter

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  products.db
docs/: ProductManager.md
docs/html/: Analytics_8hpp.html  Analytics_8hpp__incl.map  Analytics_8hpp__incl.md5  Analytics_8hpp_source.html  DailyStats_8hpp.html  DailyStats_8hpp__dep__incl.map  DailyStats_8hpp__dep__incl.md5  DailyStats_8hpp_source.html  DataManager_8hpp.html  DataManager_8hpp__dep__incl.map  DataManager_8hpp__dep__incl.md5  DataManager_8hpp__incl.map  DataManager_8hpp__incl.md5  DataManager_8hpp_source.html  DatabaseUtils_8hpp.html  DatabaseUtils_8hpp__incl.map  DatabaseUtils_8hpp__incl.md5  DatabaseUtils_8hpp_source.html  DiaryManager_8hpp.html  DiaryManager_8hpp__dep__incl.map  DiaryManager_8hpp__dep__incl.md5  DiaryManager_8hpp__incl.map  DiaryManager_8hpp__incl.md5  DiaryManager_8hpp_source.html  ProductManager_8hpp.html  ProductManager_8hpp__dep__incl.map  ProductManager_8hpp__dep__incl.md5  ProductManager_8hpp__incl.map  ProductManager_8hpp__incl.md5  ProductManager_8hpp_source.html  Product_8hpp.html  Product_8hpp__dep__incl.map  Product_8hpp__dep__incl.md5  Product_8hpp__incl.map  Product_8hpp__incl.md5  Product_8hpp_source.html  annotated.html  classAnalytics-members.html  classAnalytics.html  classDataManager-members.html  (+22 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_0.js  classes_1.js  classes_2.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js
include/: Analytics.hpp  DailyStats.hpp  DataManager.hpp  DatabaseUtils.hpp  DiaryManager.hpp  Product.hpp  ProductManager.hpp
src/: Analytics.cpp  DataManager.cpp  DatabaseUtils.cpp  DiaryManager.cpp  ProductManager.cpp  main.cpp
tests/: CMakeLists.txt  test_datamanager.cpp  test_productmanager.cpp
